# rare_events_wasm

./: Cargo.toml  README.md  index.html
src/: app.rs  build.rs  dark_magic.rs  lib.rs  main.rs  misc.rs
src/app/: chapter1.rs  chapter_markers.rs  code_editor.rs  example.rs  landing_page.rs  menu.rs
src/app/chapter1/: coin_sequence_wl.rs  first.rs  parallel_tempering.rs  second.rs  wang_landau.rs
src/dark_magic/: boxed_anything.rs  thread_helper.rs
