[package]
name = "rare_events_wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.30.0"
eframe = { version = "0.30.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland"
] }
egui_plot= "0.30.0"
strum = "0.26.2"
strum_macros = "0.26.2"
egui_code_editor = "0.2.11"
derivative = "2.2.0"
lazy_static = "1.4.0"
web-time = "1.1.0"
rand_pcg = { version = "0.3.1"}
rand = "0.8.5"
sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "35af57324c6b33e4bfbbc3907db7ea3b6f40d386" }
num-traits = "0.2.19"
ordered-float = "4.5.0"
statrs = { version = "0.18.0", default-features = false}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.49"
getrandom = { version = "0.2.15", features = ["js"] }

[build-dependencies]
chrono = "0.4.39"

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
