[package]
name = "rare_events_wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.86"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.32.0"
# Interesting for NixOS: https://github.com/emilk/egui/issues/2486
# In the future I want to look at nix develop
# Also look at https://github.com/cargo2nix/cargo2nix
eframe = { version = "0.32.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "wayland"
] }
egui_plot= "0.33.0"
strum = "0.27.2"
strum_macros = "0.27.2"
egui_code_editor = "=0.2.14"
derivative = "2.2.0"
web-time = "1.1.0"
rand_pcg = { version = "0.9.0"}
rand = "0.9.0"
#sampling = { git = "https://github.com/Pardoxa/sampling.git", rev = "f5082f85450572bc668c42bc992f4d405829c278" }
sampling = "0.3.0"
num-traits = "0.2.19"
ordered-float = "5.1.0"
statrs = { version = "0.18.0", default-features = false}

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.56"
getrandom = { version = "^0.3.4", features = ["wasm_js"] } # is a dependency of egui, can only be updated to 0.3 etc when egui did so as well

[build-dependencies]
chrono = "0.4.41"

[profile.release]
opt-level = 3 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
